--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ blinker==1.7.0
 click==8.1.7
 Flask==3.0.2
 future @ file:///AppleInternal/Library/BuildRoots/9dd5efe2-7fad-11ee-b588-aa530c46a9ea/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
+gunicorn==21.2.0
 importlib_metadata==7.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
 macholib @ file:///AppleInternal/Library/BuildRoots/9dd5efe2-7fad-11ee-b588-aa530c46a9ea/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
 MarkupSafe==2.1.5
+packaging==24.0
 six @ file:///AppleInternal/Library/BuildRoots/9dd5efe2-7fad-11ee-b588-aa530c46a9ea/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
 Werkzeug==3.0.1
 zipp==3.17.0
